# vulkan-ray-tracing

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  MyVulkan.sln  MyVulkan.vcxproj  MyVulkan.vcxproj.filters  README.md  allocator.cpp  allocator.h  common.cpp  common.h  device_initialization.cpp  device_initialization.h  main.cpp  resource_manager.h  swapchain_initialization.cpp  swapchain_initialization.h  vk_layer_settings.txt  vulkan-base.sln  vulkan-base.vcxproj  vulkan-base.vcxproj.filters  vulkan_app.cpp  vulkan_app.h  vulkan_demo.cpp  vulkan_demo.h  vulkan_utilities.cpp  vulkan_utilities.h
data/: chalet.jpg.REMOVED.git-id  chalet.obj.REMOVED.git-id
data/model/: credits.txt
data/spirv/: copy_to_swapchain.comp.spv  model.fb  model.frag.spv  model.vb  model.vert.spv  simple.chit.spv  simple.miss.spv  simple.rgen.spv  simple.rgenb
include/vulkan/: spirv.json  spirv.lua
shaders/: frag.spv  shader.frag  shader.vert  vert.spv
src/: acceleration_structure.cpp  acceleration_structure.h  allocator.cpp  common.cpp  common.h  copy_to_swapchain.cpp  copy_to_swapchain.h  debug.cpp  debug.h  demo.cpp  demo.h  geometry.cpp  geometry.h  gpu_mesh.h  lib.cpp  lib.h  linear_algebra.cpp  linear_algebra.h  main.cpp  matrix.cpp  matrix.h  mesh.cpp  mesh.h  platform.h  raster_resources.cpp  raster_resources.h  rasterization_resources.cpp  rasterization_resources.h  raytracing_resources.cpp  raytracing_resources.h  resource_manager.cpp  resource_manager.h  rt_resources.cpp  rt_resources.h  std.h  triangle_mesh.cpp  triangle_mesh.h  utils.cpp  utils.h  vector.h  (+13 more)
src/kernels/: copy_to_swapchain.cpp  copy_to_swapchain.h  draw_mesh.cpp  draw_mesh.h  raytrace_scene.cpp  raytrace_scene.h
src/shaders/: common.glsl  compile.bat  compile_glsl.bat  compile_hlsl.bat  compile_shaders.bat  compile_shaders_debug.bat  compile_shaders_release.bat  copy_to_swapchain.comp.glsl  model.frag  model.hlsl  model.vert  raster_mesh.frag.glsl  raster_mesh.vert.glsl  rt_mesh.rchit.glsl  rt_mesh.rgen.glsl  rt_mesh.rmiss.glsl  rt_utils.glsl  shared.glsl  simple.rchit.glsl  simple.rgen
src/shaders/glsl/: copy_to_swapchain.comp.glsl  shared.glsl  simple.rchit  simple.rgen  simple.rgen.glsl  simple.rmiss  simple.rmiss.glsl  utils.glsl
src/shaders/hlsl/: copy_to_swapchain.comp  model.frag  model.vert
src/shaders/spirv/: model_frag.cpp  model_vert.cpp
